--- a/index.html
+++ b/index.html
@@ -55,9 +55,50 @@
 
   <div class="sidebar" id="sidebar">
     <a href="#" id="Men">Men</a>
+      <ul>
+        <li><a href="#">Accessories</a></li>
+        <li><a href="#">Vests</a></li>
+        <li><a href="#">Jackets</a></li>
+        <li><a href="#">Shirts</a></li>
+        <li><a href="#">T-shirts</a></li>
+        <li><a href="#">Polos</a></li>
+        <li><a href="#">Sweats</a></li>
+        <li><a href="#">Hoodies</a></li>
+        <li><a href="#">Pants</a></li>
+        <li><a href="#">Jeans</a></li>
+        <li><a href="#">Shorts</a></li> 
+        <li><a href="#">Shoes</a></li>
+        <li><a href="#">Sneakers</a></li>
+        <li><a href="#">Boots</a></li> 
+      </ul>
     <a href="#" id="Women">Women</a>
+      <ul>
+        <li><a href="#">Accessories</a></li>
+        <li><a href="#">Shirts</a></li>
+        <li><a href="#">Tops</a></li>
+        <li><a href="#">Bodys</a></li>
+        <li><a href="#">Blouses</a></li>
+        <li><a href="#">T-shirts</a></li>
+        <li><a href="#">Sweats</a></li>
+        <li><a href="#">Hoodies</a></li>
+        <li><a href="#">Cardigans</a></li>
+        <li><a href="#">Pants</a></li>
+        <li><a href="#">Jeans</a></li>
+        <li><a href="#">Robes</a></li>
+        <li><a href="#">Skirts</a></li>  
+        <li><a href="#">Shoes</a></li>
+        <li><a href="#">Sneakers</a></li>
+        <li><a href="#">Boots</a></li> 
+      </ul>
     <a href="#" id="Boys">Boys</a>
+      <ul>
+        <li><a href="#">Accessories</a></li>
+        <li><a href="#">1-6 years old</a></li>
+        <li><a href="#">6-14 years old</a></li>
+      </ul>
     <a href="#" id="Girls">Girls</a>
+      <ul>
+      </ul>
 </div>
 </body>
 <footer class="footer">
