div containing class mwc container

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
   </div>
 
   <div class="sidebar" id="sidebar">
+    <div class="mwc-container">  
     <a href="#" id="Men">Men</a>
       <ul>
         <li><a href="#">Accessories</a></li>
@@ -71,6 +72,8 @@
         <li><a href="#">Sneakers</a></li>
         <li><a href="#">Boots</a></li> 
       </ul>
+    </div>
+    <div class="mwc-container">  
     <a href="#" id="Women">Women</a>
       <ul>
         <li><a href="#">Accessories</a></li>
@@ -90,12 +93,14 @@
         <li><a href="#">Sneakers</a></li>
         <li><a href="#">Boots</a></li> 
       </ul>
+    </div>
     <a href="#" id="Boys">Boys</a>
       <ul>
         <li><a href="#">Accessories</a></li>
         <li><a href="#">1-6 years old</a></li>
         <li><a href="#">6-14 years old</a></li>
       </ul>
+    </div>
     <a href="#" id="Girls">Girls</a>
       <ul>
       </ul>
