--- a/ProductPage.html
+++ b/ProductPage.html
@@ -101,39 +101,18 @@
           </div>
 
           <div>
-            <p>Delivery:</p>
-            <p>
-              Free standard shipping on orders over $35 before tax, plus free
-              returns.
-            </p>
-            <div class="delivery">
-              <p>TYPE</p>
-              <p>HOW LONG</p>
-              <p>HOW MUCH</p>
-            </div>
-            <hr />
-            <div class="delivery">
-              <p>Standard delivery</p>
-              <p>1-4 business days</p>
-              <p>$4.50</p>
-            </div>
-            <hr />
-            <div class="delivery">
-              <p>Express delivery</p>
-              <p>1 business day</p>
-              <p>$10.00</p>
-            </div>
-            <hr />
-            <div class="delivery">
-              <p>Pick up in store</p>
-              <p>1-3 business days</p>
-              <p>Free</p>
-            </div>
+            <p>Select Color:</p>
+            <select id="size">
+              <option value="black">Black</option>
+              <option value="blue">Blue</option>
+              <option value="white">White</option>
+              <option value="red">Red</option>
+              <!-- Add more options as needed -->
+            </select>
           </div>
         </div>
       </section>
 
-      <!-- script tags -->
       <script src="js/cart.js"></script>
     </div>
 
