--- a/Seller_Dashboard.html
+++ b/Seller_Dashboard.html
@@ -12,7 +12,7 @@
 <body>
     <!-- Top Menu -->
     <div class="top-menu">
-        <img src="ICONS/Qashi.png" alt="Qashi.com Logo">
+       <a href="index.html"><img src="ICONS/Qashi.png" alt="Qashi.com Logo"></a>
         <div class="user-profile">
             <span class="material-icons">account_circle</span>
             <div class="dropdown">
