Implement user session management and enhance profile handling ( signup and login which dont work for now)

--- a/User_Profile.html
+++ b/User_Profile.html
@@ -43,23 +43,23 @@
             <h2>Personal Information</h2>
             <form id="profile-form">
                 <label for="firstname">First Name</label>
-                <input type="text" id="firstname" name="firstname" placeholder="Zoubir">
+                <input type="text" id="firstname" name="firstname" placeholder="">
                 <label id="I-firstname">Please enter a valid first name</label>
 
                 <label for="lastname">Last Name</label>
-                <input type="text" id="lastname" name="lastname" placeholder="Doe">
+                <input type="text" id="lastname" name="lastname" placeholder="">
                 <label id="I-lastname">Please enter a valid last name</label>
 
                 <label for="datebirth">Date of Birth</label>
-                <input type="date" id="datebirth" name="datebirth" placeholder="1990-01-01">
+                <input type="date" id="datebirth" name="datebirth" placeholder="">
                 <label id="I-datebirth">Please enter a valid date of birth</label>
 
                 <label for="phone">Phone</label>
-                <input type="text" id="phone" name="phone" placeholder="1234567890">
+                <input type="text" id="phone" name="phone" placeholder="">
                 <label id="I-phone">Please enter a valid phone number</label>
 
                 <label for="email">Email</label>
-                <input type="email" id="email" name="email" placeholder="zoubir@example.com">
+                <input type="email" id="email" name="email" placeholder="">
                 <label id="I-email">Please enter a valid email</label>
 
                 <button type="submit" id="update-profile">Update Profile</button>
