--- a/ProductPage.html
+++ b/ProductPage.html
@@ -16,6 +16,7 @@
     <title>Qashi</title>
   </head>
   <body>
+    <script src="Script/ProductPage.js"></script>
     <script defer src="Script/Menu.js"></script>
     <script defer src="Script/Product_img.js"></script>
 
@@ -50,6 +51,7 @@
       </div>
       <a href="Log-in.html"><img class="account-icon" src="ICONS/Account-button.png" /></a>
     </div>
+    
 
     <div class="container">
       <div class="pagination">
@@ -57,60 +59,6 @@
       </div>
       <!-- product section -->
       <section class="product-container">
-        <!-- left side -->
-        <div class="img-card">
-          <img src="Assets/image-1.png" alt="" id="featured-image" />
-          <!-- small img -->
-          <div class="small-Card">
-            <img src="Assets/image-1.png" alt="" class="small-Img" />
-            <img src="Assets/small-img-2.png" alt="" class="small-Img" />
-            <img src="Assets/small-img-3.png" alt="" class="small-Img" />
-            <img src="Assets/image-1.png" alt="" class="small-Img" />
-          </div>
-        </div>
-        <!-- Right side -->
-        <div class="product-info">
-          <h3>LEVI'S® WOMEN'S XL TRUCKER JACKET</h3>
-          <h5>Price: $140 <del>$170</del></h5>
-          <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsa
-            accusantium, aspernatur provident beatae corporis veniam atque
-            facilis, consequuntur assumenda, vitae dignissimos iste
-            exercitationem dolor eveniet alias eos ullam nesciunt voluptatum.
-          </p>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore
-            accusamus natus dolorum. Quaerat nulla quod doloremque, officia quis
-            provident amet adipisci unde esse iure delectus, maxime inventore
-            optio fuga nisi?
-          </p>
-
-          <div class="sizes">
-            <p>Size:</p>
-            <select name="Size" id="size" class="size-option">
-              <option value="xxl">XXL</option>
-              <option value="xl">XL</option>
-              <option value="medium">Medium</option>
-              <option value="small">Small</option>
-            </select>
-          </div>
-
-          <div class="quantity">
-            <input type="number" value="1" min="1" />
-            <button>Add to Cart</button>
-          </div>
-
-          <div>
-            <p>Select Color:</p>
-            <select id="size">
-              <option value="black">Black</option>
-              <option value="blue">Blue</option>
-              <option value="white">White</option>
-              <option value="red">Red</option>
-              <!-- Add more options as needed -->
-            </select>
-          </div>
-        </div>
       </section>
 
       <script src="js/cart.js"></script>
