--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   </div>
 
   <div class="container">
-    <div id="productContainer" class="product-container"></div>
+    <div class="product-container" id="productContainer"></div>
   </div>
 
   <div class="sidebar" id="sidebar">
@@ -71,73 +71,8 @@
         <input type="text" id="size" name="size" placeholder="Filter by size">
       </form>
     </div>
-
-    <div>
-      <div class="category" data-category="men">
-        <a href="#">Men</a>
-        <div class="dropdown" id="men-dropdown">
-          <a href="#">Jackets</a>
-          <a href="#">Coats</a>
-          <a href="#">Vests</a>
-          <a hred="#">Bumbers</a>
-          <a href="#">Sweatshirts</a>
-          <a href="#">T-shirts</a>
-          <a href="#">Shirts</a>
-          <a href="#">Polos</a>
-          <a href="#">Knitwear</a>
-          <a href="#">Sweaters</a>
-          <a href="#">Hoodies</a>
-          <a href="#">Suits</a>
-          <a href="#">Blazers</a>
-          <a href="#">Shorts</a>
-          <a href="#">Jeans</a>
-          <a href="#">Pants</a>
-          <a href="#">Trousers</a>
-          <a href="#">Shoes</a>
-          <a href="#">Boots</a>
-          <a href="#">Accessories</a>
-        </div>
-      </div>
-
-      <div class="category" data-category="women">
-        <a href="#">Women</a>
-        <div class="dropdown" id="women-dropdown">
-          <a href="#">Jackets</a>
-          <a href="#">Coats</a>
-          <a href="#">Vests</a>
-          <a hred="#">Bumbers</a>
-          <a href="#">Sweatshirts</a>
-          <a href="#">T-shirts</a>
-          <a href="#">Shirts</a>
-          <a href="#">Knitwear</a>
-          <a href="#">Sweaters</a>
-          <a href="#">Hoodies</a>
-          <a href="#">Suits</a>
-          <a href="#">Blazers</a>
-          <a href="#">Jeans</a>
-          <a href="#">Pants</a>
-          <a href="#">Robes</a>
-          <a href="#">Dresses</a>
-          <a href="#">Skirts</a>
-          <a href="#">Trousers</a>
-          <a href="#">Shoes</a>
-          <a href="#">Boots</a>
-          <a href="#">Accessories</a>
-        </div>
-      </div>
-
-      <div class="category" data-category="kids">
-        <a href="#">Kids</a>
-        <div class="dropdown" id="kids-dropdown">
-          <a href="#">T-Shirts</a>
-          <a href="#">Shorts</a>
-          <a href="#">Sneakers</a>
-        </div>
-      </div>
-    </div>
-
-
   </div>
+
 </body>
 <footer class="footer">
   <div class="footer-container">
