--- a/CheckOut.html
+++ b/CheckOut.html
@@ -9,6 +9,7 @@
         <a id="Logo" href="index.html"><img class="img" src="ICONS/Qashi.png"></a>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script></script>
 </head>
 
 <body>
@@ -113,44 +114,6 @@
             <div class="container">
                 <h4>Cart <span class="price" style="color:black"><i class="fa fa-shopping-cart"></i> <b>2</b></span>
                 </h4>
-                <script>
-                    document.addEventListener('DOMContentLoaded', function () {
-                        fetchCartItems();
-                    });
-                    function fetchCartItems() {
-                        const xhr = new XMLHttpRequest();
-                        xhr.open('GET', 'Database/fetch_cart_items.php', true);
-                        xhr.onload = function () {
-                            if (xhr.status === 200 && xhr.readyState === 4) {
-                                const data = JSON.parse(xhr.responseText);
-                                const cartContainer = document.querySelector('.col-25 .container');
-                                let cartHTML = '<h4>Cart <span class="price" style="color:black"><i class="fa fa-shopping-cart"></i> <b>' + data.length + '</b></span></h4>';
-                                let total = 0;
-                                data.forEach(item => {
-                                    // Calculate the total for each product (price * quantity)
-                                    const itemTotal = parseFloat(item.price) * parseInt(item.quantity);
-                                    total += itemTotal;
-                                    // Add the product to the cart HTML
-                                    cartHTML += `
-            <p>
-                ${item.name} (x${item.quantity}) 
-                <span class="price">$${itemTotal.toFixed(2)}</span>
-            </p>
-            `;
-                                });
-                                // Round the total to two decimal places
-                                total = Math.round(total * 100) / 100;
-                                // Add the total to the cart HTML
-                                cartHTML += `<hr><p>Total <span class="price" style="color:black"><b>$${total.toFixed(2)}</b></span></p>`;
-                                // Update the cart container with the new HTML
-                                cartContainer.innerHTML = cartHTML;
-                            } else {
-                                console.error('Error fetching cart items.');
-                            }
-                        };
-                        xhr.send();
-                    }
-                </script>
             </div>
         </div>
     </div>
