Enhance filter sidebar functionality and improve code readability
- Update index.html to call generateFilterSidebar() when toggling the sidebar.
- Refactor generateFilterSidebar() in Menu.js to include detailed comments for better understanding.
- Improve the structure of the filter sidebar by adding comments to clarify the purpose of each section and element.
- Ensure that the filter options are dynamically generated with appropriate labeling and grouping for better user experience.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <script defer src="Script/Menu.js"></script>
 
   <div class="top-border">
-    <div class="hamburger" onclick="toggleSidebar()">
+    <div class="hamburger" onclick="toggleSidebar(); generateFilterSidebar()">
       <span></span>
       <span></span>
       <span></span>
