Refactor index.html and enhance SQL query logging
- Update index.html to simplify the sidebar toggle functionality by removing the redundant call to generateFilterSidebar().
- Clean up the Quick Links section by removing the Favorites and Checkout links for a more streamlined navigation.
- Add multiple SQL queries to query_log.txt for retrieving product details based on various categories, including men, women, and boys, enhancing the logging of product retrieval operations.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <script defer src="Script/Menu.js"></script>
 
   <div class="top-border">
-    <div class="hamburger" onclick="toggleSidebar(); generateFilterSidebar()">
+    <div class="hamburger" onclick="toggleSidebar()">
       <span></span>
       <span></span>
       <span></span>
@@ -90,9 +90,7 @@
       <h3>Quick Links</h3>
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="Favorite-items.html">Favorites</a></li>
         <li><a href="Log-in.html">My Account</a></li>
-        <li><a href="CheckOut.html">Checkout</a></li>
       </ul>
     </div>
 
